[package]
authors = ["Vince Vasta <vince.vasta@gmail.com>"]
description = "A libp2p chat client example running as a browser wasm app."
edition = "2021"
license = "MIT"
name = "chat-client"
version = "0.1.0"

[dependencies]
async-channel = "1.7.1"
console_error_panic_hook = "0.1"
eframe = "0.19.0"
egui = "0.19.0"
futures = "0.3.25"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
websys-transport = { path = "../websys-transport" }

[dependencies.libp2p]
path = "../../rust-libp2p"
features = ["floodsub", "mplex", "noise", "wasm-bindgen"]
