[package]
authors = ["Vince Vasta <vince.vasta@gmail.com>"]
description = "libp2p transports using Websys."
edition = "2021"
license = "MIT"
name = "websys-transport"
version = "0.1.0"

[dependencies]
futures = "0.3.25"
thiserror = "1.0.37"
wasm-bindgen = "0.2.83"

[dependencies.libp2p]
path = "../../rust-libp2p"
features = [
    "floodsub",
    "mplex",
    "noise",
]

[dependencies.web-sys]
version = "0.3.22"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]

